--- a/pong_03.ipynb
+++ b/pong_03.ipynb
@@ -4,18 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pong 01"
+    "## Pong 03"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El siguiente programa muestra la primera versión de pong: \n",
-    "Hemos definido una clae para la bola (`Ball`). La clase implementa los\n",
-    "mñetodos update (Por ahora solo se mueve hacia la derecha) y\n",
-    "`draw`, de forma que la responsabilidad de actualizar su posición\n",
-    "y la de pintarse en pantalla son asumidas por la propia bola:"
+    "El siguiente programa muestra la tercera versión de pong: \n",
+    "Hemos definido una cleae para la bola (`Ball`) que seba moverse\n",
+    "de forma adecuada por el campo y rebota en las márgenes de la\n",
+    "pantalla. Ahora le toca el turno a las raquetas o _paddles_ del juego.\n",
+    "Para ello, crearemos una clase `Paddle`. para empezar de forma simple, \n",
+    "estap rimera version solo sabrá como dibujars a si misma:"
    ]
   },
   {
@@ -24,6 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Version 3.0\n",
+    "\n",
     "import math\n",
     "import pygame\n",
     "import random\n",
@@ -34,6 +37,7 @@
     "from vectores import Vector2\n",
     "\n",
     "SIZE = WIDTH, HEIGHT = 800, 640  # Tamaño de pantalla\n",
+    "CENTER = Vector2(WIDTH//2, HEIGHT//2)\n",
     "\n",
     "BLACK = (0, 0, 0)                # Colores\n",
     "WHITE = (255, 255, 255)\n",
@@ -56,7 +60,20 @@
     "        \n",
     "    def update(self):\n",
     "        self.pos += self.orientation * self.speed\n",
-    "    \n",
+    "        if self.pos.x < 0:\n",
+    "            self.pos.x = 0\n",
+    "            self.orientation.theta = pi - self.orientation.theta\n",
+    "        elif self.pos.x > WIDTH:\n",
+    "            self.pos.x = WIDTH\n",
+    "            self.orientation.theta = pi - self.orientation.theta\n",
+    "            \n",
+    "        if self.pos.y < 0:\n",
+    "            self.pos.y = 0\n",
+    "            self.orientation.theta = -self.orientation.theta\n",
+    "        elif self.pos.y > HEIGHT:\n",
+    "            self.pos.y = HEIGHT\n",
+    "            self.orientation.theta = -self.orientation.theta\n",
+    "            \n",
     "    def draw(self, canvas):\n",
     "        rect = pygame.Rect((self.pos.x-5, self.pos.y-5), (11, 11))\n",
     "        pygame.draw.rect(canvas, WHITE, rect)\n",
@@ -78,12 +95,12 @@
     "    \n",
     "pygame.init()\n",
     "try:\n",
-    "    pygame.display.set_caption(\"Pong 03\")\n",
+    "    pygame.display.set_caption(\"Pong 3.0\")\n",
     "    screen = pygame.display.set_mode(SIZE, 0, 24)\n",
     "    limits = screen.get_rect()\n",
     "    \n",
     "    # Parte de inicialización del juego\n",
-    "    r_paddle = Paddle(WIDTH-50, HEIGHT//2)\n",
+    "    r_paddle = Paddle(WIDTH-50, CENTER.y)\n",
     "    ball = Ball(limits.centerx, limits.centery)\n",
     "    clock = pygame.time.Clock()    \n",
     "    in_game = True\n",
@@ -109,14 +126,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hemos implementado una clase para las raquetas"
+    "### La clase Paddle"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Una primera version:\n",
+    "Esta primera version de la clase Paddle es muy sencilla:\n",
     "    \n",
     "```Python\n",
     "class Paddle:\n",
@@ -147,14 +164,14 @@
     "\n",
     "### Eventos\n",
     "\n",
-    "Hasta ahora solon os hemos preocuado por un evento de entrada, concretamente\n",
+    "Hasta ahora solo nos hemos preocuado por un evento de entrada, concretamente\n",
     "el evento de salida del juego (Cuando cerramos la ventana del mismo). Pygame\n",
     "en realidad puede controlar muchos más eventos.\n",
     "\n",
-    "Los eventos son la manera que tiene el sistema de decirnos las cosas que pasan. \n",
+    "Los **eventos** son la manera que tiene el sistema de decirnos las cosas que pasan. \n",
     "Cada vez que se pulsa una tecla, se mueve un ratón o se cambia la inclinación\n",
     "de un joystick, el sistema nos informa mediante eventos. De hecho,\n",
-    "cuando se pulsa una tecla, se generan **dos** eventos, uno cuando la tecla\n",
+    "cuando se pulsa una tecla, se generan _dos_ eventos, uno cuando la tecla\n",
     "es pulsada (evento del tipo `KEYDOWN`, como veremos) y otra cuando la tecla\n",
     "se deja de pulsar (evento de tipo `KEYUP`). Esto se usa, por ejemplo,\n",
     "para la autorepetición en editores de texto.\n",
@@ -184,10 +201,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test eventos de entrada\n",
+    "\n",
     "import math\n",
     "import pygame\n",
     "import random\n",
@@ -243,7 +262,6 @@
     "        pygame.display.update()\n",
     "        clock.tick(FPS)\n",
     "finally:\n",
-    "    print('Salimos del juego')\n",
     "    pygame.font.quit()\n",
     "    pygame.quit()"
    ]
@@ -264,9 +282,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos a refactorizar un poco el código. En este caso estamos interesados (por el momento) solo en\n",
-    "unas cuantas cosas que pueden pasar:\n",
-    "    \n",
+    "## Refactorización: La clase InputState\n",
+    "\n",
+    "Vamos a refactorizar un poco el código. Vamos a centrarnos solo en\n",
+    "las cosas que nos interesan ahora mismo:\n",
+    "\n",
     "- El jugador izquierdo mueve la raqueta hacia arriba\n",
     "- El jugador izquierdo mueve la raqueta hacia abajo\n",
     "- El jugador derecho mueve la raqueta hacia arriba\n",
@@ -324,10 +344,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Salimos del juego\n"
+     ]
+    }
+   ],
    "source": [
+    "# Test InputState\n",
+    "\n",
     "import math\n",
     "import pygame\n",
     "import random\n",
@@ -457,11 +487,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nos venimos un poco arriba y decidimos incluir la raqueta izquierda, que debe comportarse\n",
+    "igual que la derecha, así que todo debería funcinar perfectamente:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Version 3.1\n",
+    "\n",
     "import math\n",
     "import pygame\n",
     "import random\n",
@@ -524,7 +564,20 @@
     "        \n",
     "    def update(self):\n",
     "        self.pos += self.orientation * self.speed\n",
-    "    \n",
+    "        if self.pos.x < 0:\n",
+    "            self.pos.x = 0\n",
+    "            self.orientation.theta = pi - self.orientation.theta\n",
+    "        elif self.pos.x > WIDTH:\n",
+    "            self.pos.x = WIDTH\n",
+    "            self.orientation.theta = pi - self.orientation.theta\n",
+    "            \n",
+    "        if self.pos.y < 0:\n",
+    "            self.pos.y = 0\n",
+    "            self.orientation.theta = -self.orientation.theta\n",
+    "        elif self.pos.y > HEIGHT:\n",
+    "            self.pos.y = HEIGHT\n",
+    "            self.orientation.theta = -self.orientation.theta\n",
+    "        \n",
     "    def draw(self, canvas):\n",
     "        rect = pygame.Rect((self.pos.x-5, self.pos.y-5), (11, 11))\n",
     "        pygame.draw.rect(canvas, WHITE, rect)\n",
@@ -596,7 +649,7 @@
     "    \n",
     "pygame.init()\n",
     "try:\n",
-    "    pygame.display.set_caption(\"Pong 03\")\n",
+    "    pygame.display.set_caption(\"Pong 3.1\")\n",
     "    screen = pygame.display.set_mode(SIZE, 0, 24)\n",
     "    limits = screen.get_rect()\n",
     "    \n",
@@ -624,18 +677,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "¿**Que ha pachado**? Las dos requetas se mueven a la vez. \n",
+    "\n",
+    "Nos hemos pasado haciendo que las dos raquetas sean exactamente iguales; es\n",
+    "verdad que se parecen en muchas cosas, pero no en todo. Vamos a usar una técnica muy\n",
+    "útil en programación orientada a objetos que se llama **Herencia**."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Version 3.2\n",
+    "\n",
     "import math\n",
     "import pygame\n",
     "import random\n",
@@ -657,36 +716,7 @@
     "YELLOW = (255, 255, 0)\n",
     "\n",
     "FPS = 30                         # Velocidad del juego\n",
-    "\n",
-    "\n",
-    "class Paddle:\n",
-    "\n",
-    "    def __init__(self, x, y):\n",
-    "        self.rect = Rect((0, 0), (14, 100))\n",
-    "        self.rect.center = (x, y)\n",
-    "        self.speed = 0\n",
-    "\n",
-    "    def update(self, inputs):\n",
-    "        if inputs.left_up:\n",
-    "            self.go_up()\n",
-    "        elif inputs.left_down:\n",
-    "            self.go_down()\n",
-    "        else:\n",
-    "            self.stop()         \n",
-    "        self.rect.center.y += self.speed\n",
-    "\n",
-    "    def draw(screen):\n",
-    "        pygame.draw.rect(screen, WHITE, self.rect)\n",
-    "        \n",
-    "    def go_up(self):\n",
-    "        self.speed = -10\n",
-    "\n",
-    "    def go_down(self):\n",
-    "        self.speed = 10\n",
-    "        \n",
-    "    def stop(self):\n",
-    "        self.speed = 0\n",
-    "        \n",
+    " \n",
     "        \n",
     "class Ball:\n",
     "    \n",
@@ -698,11 +728,58 @@
     "        \n",
     "    def update(self):\n",
     "        self.pos += self.orientation * self.speed\n",
-    "    \n",
+    "        if self.pos.x < 0:\n",
+    "            self.pos.x = 0\n",
+    "            self.orientation.theta = pi - self.orientation.theta\n",
+    "        elif self.pos.x > WIDTH:\n",
+    "            self.pos.x = WIDTH\n",
+    "            self.orientation.theta = pi - self.orientation.theta\n",
+    "            \n",
+    "        if self.pos.y < 0:\n",
+    "            self.pos.y = 0\n",
+    "            self.orientation.theta = -self.orientation.theta\n",
+    "        elif self.pos.y > HEIGHT:\n",
+    "            self.pos.y = HEIGHT\n",
+    "            self.orientation.theta = -self.orientation.theta\n",
+    "        \n",
     "    def draw(self, canvas):\n",
     "        rect = pygame.Rect((self.pos.x-5, self.pos.y-5), (11, 11))\n",
     "        pygame.draw.rect(canvas, WHITE, rect)\n",
     "\n",
+    "\n",
+    "class InputState:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.left_up = False\n",
+    "        self.left_down = False\n",
+    "        self.right_up = False\n",
+    "        self.right_down = False\n",
+    "        self.exit = False\n",
+    "        \n",
+    "    def update(self):\n",
+    "        for event in pygame.event.get():\n",
+    "            if event.type == pygame.QUIT:\n",
+    "                self.exit = True\n",
+    "            elif event.type == pygame.KEYDOWN:\n",
+    "                if event.key == pygame.K_ESCAPE:\n",
+    "                    self.exit = True\n",
+    "                elif event.key == pygame.K_q:\n",
+    "                    self.left_up = True\n",
+    "                elif event.key == pygame.K_a:\n",
+    "                    self.left_down = True\n",
+    "                elif event.key == pygame.K_UP:\n",
+    "                    self.right_up = True\n",
+    "                elif event.key == pygame.K_DOWN:\n",
+    "                    self.right_down = True\n",
+    "            elif event.type == pygame.KEYUP:\n",
+    "                if event.key == pygame.K_q:\n",
+    "                    self.left_up = False\n",
+    "                elif event.key == pygame.K_a:\n",
+    "                    self.left_down = False\n",
+    "                elif event.key == pygame.K_UP:\n",
+    "                    self.right_up = False\n",
+    "                elif event.key == pygame.K_DOWN:\n",
+    "                    self.right_down = False\n",
     "        \n",
     "class Paddle:\n",
     "    \n",
@@ -747,44 +824,10 @@
     "            self.stop()        \n",
     "        super().update()   \n",
     "        \n",
-    "class InputState:\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "        self.left_up = False\n",
-    "        self.left_down = False\n",
-    "        self.right_up = False\n",
-    "        self.right_down = False\n",
-    "        self.exit = False\n",
-    "        \n",
-    "    def update(self):\n",
-    "        for event in pygame.event.get():\n",
-    "            if event.type == pygame.QUIT:\n",
-    "                self.exit = True\n",
-    "            elif event.type == pygame.KEYDOWN:\n",
-    "                if event.key == pygame.K_ESCAPE:\n",
-    "                    self.exit = True\n",
-    "                elif event.key == pygame.K_q:\n",
-    "                    self.left_up = True\n",
-    "                elif event.key == pygame.K_a:\n",
-    "                    self.left_down = True\n",
-    "                elif event.key == pygame.K_UP:\n",
-    "                    self.right_up = True\n",
-    "                elif event.key == pygame.K_DOWN:\n",
-    "                    self.right_down = True\n",
-    "            elif event.type == pygame.KEYUP:\n",
-    "                if event.key == pygame.K_q:\n",
-    "                    self.left_up = False\n",
-    "                elif event.key == pygame.K_a:\n",
-    "                    self.left_down = False\n",
-    "                elif event.key == pygame.K_UP:\n",
-    "                    self.right_up = False\n",
-    "                elif event.key == pygame.K_DOWN:\n",
-    "                    self.right_down = False\n",
     "\n",
-    "    \n",
     "pygame.init()\n",
     "try:\n",
-    "    pygame.display.set_caption(\"Pong 03\")\n",
+    "    pygame.display.set_caption(\"Pong 3.2\")\n",
     "    screen = pygame.display.set_mode(SIZE, 0, 24)\n",
     "    limits = screen.get_rect()\n",
     "    \n",
