Incluida explicación sobre herencia

--- a/pong_03.ipynb
+++ b/pong_03.ipynb
@@ -11,17 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El siguiente programa muestra la tercera versión de pong: \n",
-    "Hemos definido una cleae para la bola (`Ball`) que seba moverse\n",
-    "de forma adecuada por el campo y rebota en las márgenes de la\n",
-    "pantalla. Ahora le toca el turno a las raquetas o _paddles_ del juego.\n",
-    "Para ello, crearemos una clase `Paddle`. para empezar de forma simple, \n",
-    "estap rimera version solo sabrá como dibujars a si misma:"
+    "El siguiente programa muestra la tercera versión de pong: Hemos definido una clase para la bola (`Ball`) que sabe moverse e forma adecuada por el campo y rebota en las márgenes de la pantalla. Ahora le toca el turno a las raquetas o _paddles_ del juego. Para ello, crearemos una clase `Paddle`.\n",
+    "\n",
+    "para empezar de una forma sencilla, esta primera versión solo sabrá como dibujarse a si misma:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +63,6 @@
     "        elif self.pos.x > WIDTH:\n",
     "            self.pos.x = WIDTH\n",
     "            self.orientation.theta = pi - self.orientation.theta\n",
-    "            \n",
     "        if self.pos.y < 0:\n",
     "            self.pos.y = 0\n",
     "            self.orientation.theta = -self.orientation.theta\n",
@@ -133,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esta primera version de la clase Paddle es muy sencilla:\n",
+    "Esta primera versión de la clase `Paddle` es muy sencilla:\n",
     "    \n",
     "```Python\n",
     "class Paddle:\n",
@@ -688,8 +684,168 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Herencia de clases\n",
+    "\n",
+    "La herencia nos permite definir una clase refinando o modificando otra.\n",
+    "\n",
+    "Si decimos que una clase `A` **deriva** o **hereda** de una clase `B` (o\n",
+    "también que la clase `B` es una **superclase** de `A`), lo que queremos\n",
+    "decir es que la clase `A` dispondrá de todos los atributos y métodos de\n",
+    "la clase `B`, de entrada, aunque luego puede añadir más atributos o\n",
+    "métodos y modificar (o incluso borrar, pero está muy mal visto) los\n",
+    "atributos o métodos que ha heredado.\n",
+    "\n",
+    "La forma de expresar esta herencia en Python es:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class B:\n",
+    "    pass\n",
+    "\n",
+    "class A(B):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este caso, la clase `A` hereda o deriva de `B`.\n",
+    "\n",
+    "Como los objetos instanciados de `A` tienen los mismos atributos y\n",
+    "métodos que `B`, pueden (o quizá deben, ya que nada lo impide\n",
+    "excepto el sentido común) ser usados en cualquier sitio donde se use\n",
+    "un objeto  instaciado de `B`. Esto implica que hay una relación entre `A` y `B`\n",
+    "del tipo *es un tipo de*, es decir, donde `B` es una\n",
+    "generalidad de `A`, o `A` es una particularidad de `B`,\n",
+    "depende del punto de vista. \n",
+    "\n",
+    "En otras palabras,  todo objeto `a` instanciado de `A` debería ser\n",
+    "también un `B` (pero no  necesariamente al revés).\n",
+    "\n",
+    "¿Para que sirve la herencia? Por encima de todo, para reducir el\n",
+    "tamaño del código evitando repeticiones. Si organizamos las herencias\n",
+    "correctamente en jerarquías, de más genéricas a más específicas,\n",
+    "podemos compatibilizar el código común de las primeras con el más\n",
+    "específico de las últimas. Además, y no es un beneficio baladí,\n",
+    "simplifica los usos de los objetos instanciados, de forma que podemos\n",
+    "tratarlos a todos como si fueran del mismo tipo, aún siendo\n",
+    "diferentes.\n",
+    "\n",
+    "En la **herencia múltiple**, una clase puede heredar de más de una clase\n",
+    "base. El problema en estos casos es que puede haber conflictos si se\n",
+    "definen, en ramas distintas, un mismo método o atributo (llamado\n",
+    "herencia en diamante). En python hay un sistema de ordenación de las\n",
+    "clases, relativamente complicado, pero que asegura que no haya\n",
+    "ambigüedad con respecto a cual de las dos versiones del atributo o\n",
+    "método se va a usar."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sobreescritura o reescritura de métodos\n",
+    "\n",
+    "En el caso de que la clase modifique uno de los métodos que ha\n",
+    "heredado, se dice que ha **reescrito** o **sobreescrito** (*override*)\n",
+    "el  método.\n",
+    "\n",
+    "Como hemos visto, `A` puede sobreescribir un metodo `f` de `B`,\n",
+    "pero eso no afecta al resto del código. Si tenemos una lista con\n",
+    "objetos de tipo `A` y de tipo `B` mezclados, podemos invocar sin\n",
+    "miedo el método `f()` en cada uno de ellos, con la seguridad de que\n",
+    "en cada caso se invocará al método adecuado. Esta capacidad se llama\n",
+    "**polimorfismo** (del griego *múltiples formas*. Quizá el nombre no sea\n",
+    "el más adecuado, porque más que muchas formas, es más la misma forma, con\n",
+    "diferentes contenidos).\n",
+    "\n",
+    "En el ejemplo de la lista de objetos derivados de `A` y\n",
+    "`B`, si no tuvieramos herencia (y polimorfismo) tendríamos que\n",
+    "implementar un `if` para poder distinguir entre los dos tipos, y\n",
+    "luego llamar a la versión correspondiente de cada método `f`.\n",
+    "además,  tendremos que revisar  la sentencia `if` si se nos ocurre\n",
+    "incluir una nueva clase `C`.\n",
+    "\n",
+    "¿Que pasa si la clase `A` sobreescribe un método de `B`, pero aún\n",
+    "así ha de invocarlo? En realidad es un caso muy común, en el que la\n",
+    "clase `A` quiere hacer lo mismo que la clase `B` y *un poquito\n",
+    "más*. Hay una función `super` que nos ayuda a\n",
+    "invocar el código de la clase (o clases) de la que derivamos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Llamando a f en clase B\n",
+      "Llamando a f en clase A\n"
+     ]
+    }
+   ],
+   "source": [
+    "class B:\n",
+    "    def f(self):\n",
+    "        print('Llamando a f en clase B')\n",
+    "        \n",
+    "class A(B):\n",
+    "    def f(self):\n",
+    "        super().f()\n",
+    "        print('Llamando a f en clase A')\n",
+    "        \n",
+    "a = A()\n",
+    "a.f()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Funciones útiles para tratar con objetos y clases\n",
+    "\n",
+    "Si tenemos un objeto y queremos saber si es una instancia de  una\n",
+    "clase en particular, o de alguna de sus subclases , podemos usar la función `isinstance(objeto, clase)`, que nos devolverá verdadero si es así. Si queremos\n",
+    "saber si una clase deriva de otra podemos usar\n",
+    "la funcion `issubclass(clase, clase)`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class B:\n",
+    "    pass\n",
+    "        \n",
+    "class A(B):\n",
+    "    pass\n",
+    "\n",
+    "a = A()\n",
+    "b = B()\n",
+    "assert isinstance(a, A) == True\n",
+    "assert isinstance(b, B) == True  \n",
+    "assert isinstance(a, B) == True  # A es un subtipo de B\n",
+    "assert isinstance(b, A) == False  # todos los a son tipos de b, pero no al reves\n",
+    "assert issubclass(A, B) == True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
